--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,27 @@
 title: Hello
 email: sircambridge@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Gene wanted to make this app to level the playing field with robo booking services for campsites that often get booked within seconds.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+  We wanted to make this app to level the playing field against paid robo booking services for campsites that often get booked within seconds.
+baseurl: "/recbot" # the subpath of your site, e.g. /blog
+url: "https://sircambridge.github.io/recbot/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sircambridge
 github_username:  sircambridge
 
+# show_downloads: true
+# google_analytics: [Your Google Analytics tracking ID]
+
 # Build settings
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
+# theme: minimal
 plugins:
   - jekyll-feed
+
+github:
+  is_project_page : false
+  is_user_page : false
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
