--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hello
+title: Recbot
 email: sircambridge@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   We wanted to make this app to level the playing field against paid robo booking services for campsites that often get booked within seconds. 
