--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   We wanted to make this app to level the playing field against paid robo booking services for campsites that often get booked within seconds. 
 # baseurl: "/recbot" # the subpath of your site, e.g. /blog
 baseurl: "/" #
-url: "https://sircambridge.github.io/recbot/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://recbot.site" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sircambridge
 github_username:  sircambridge
 
